src/front/styles/index.css
/* 
    General Styles used on every website (Don't Repeat Yourself)
*/
html {
  background-color: #283340;
}
body {
  overflow-x: hidden;
}
#app {
  font-family: "Baloo Tammudu 2", sans-serif;
  background-color: #283340;
  color: #e2e8f0;
}
.navbar {
  height: 100px;
  background-color: rgb(38, 40, 46);
}
.dropdown-item {
  color: #e2e8f0;
}
.dropdown-menu {
  background-color: rgb(38, 40, 46);
  box-shadow: 0 0 100px 4px #283340;
  border-radius: 10px;
}
.loginCard {
  background-color: #283340;
}
.loginCard input {
  background-color: #283340;
}
.form-control:focus {
  background-color: #283340;
  color: #e2e8f0;
}
.form-control {
  color: #e2e8f0;
}
.nav-link {
  color: #e2e8f0;
}
.nav-pills .nav-link.active {
  background-color: #283340;
  border-bottom: 2px solid #255da7;
  color: #255da7;
}
.nav-pills .nav-link:hover {
  color: #255da7;
}
.appbtn {
  display: flex;
  justify-content: center;
  align-items: center;
  padding: 10px;
  margin: 1px;
  box-shadow: 0 0 15px 4px rgba(5, 10, 20, 30.06);
  border-radius: 15px;
  width: 100%;
  text-transform: uppercase;
}

